--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.application.name=SpringSecurityExample
 spring.datasource.url=jdbc:mysql://localhost:3306/userdetails
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Vaish@099
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-spring.jpa.show-sql=true
+# JPA configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
