--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/userdetails
+spring.datasource.url=jdbc:mysql://localhost:3306/user_db
 spring.datasource.username=root
 spring.datasource.password=Vaish@099
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
