--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
+spring.application.name=SpringSecurityExample
 spring.datasource.url=jdbc:mysql://localhost:3306/user_db
 spring.datasource.username=root
 spring.datasource.password=Vaish@099
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-server.port=9090
+
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
